[package]
name = "sirang"
version = "0.1.0"
edition = "2021"
license = "mit"
description = "A forward and reverse TCP tunnel over QUIC"
homepage="https://github.com/icelain/sirang"
repository="https://github.com/icelain/sirang"

[[bin]]
name = "sirang"
path = "./src/main.rs"

[dependencies]
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
colog = "1.3.0"
log = "0.4.22"
s2n-quic = "1.51.0"
tokio = { version = "1.42.0", features = ["full"] }
