[package]
name = "sirang"
authors = ["icelain"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A forward and reverse TCP tunnel over QUIC"
homepage="https://github.com/icelain/sirang"
repository="https://github.com/icelain/sirang"
readme="README.md"
keywords = ["cli", "tunnel", "sirang", "tcp tunnel", "tcp", "forward tunnel", "reverse tunnel", "networking", "proxy"]
categories = ["command-line-utilities"]
default-run = "sirang"

[[bin]]
name = "sirang"
path = "./src/main.rs"

[dependencies]
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
colog = "1.3.0"
log = "0.4.22"
s2n-quic = "1.51.0"
tokio = { version = "1.42.0", features = ["full"] }
